# iter-transpose

./: Cargo.toml  README.md  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml
examples/: read_entries.rs
implementors/core/iter/traits/iterator/: trait.Iterator.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/iter_transpose/: trait.IterTranspose.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
iter_transpose/: all.html  fn.transposed_iter.html  index.html  sidebar-items.js  struct.OptionTransposedIter.html  struct.ResultTransposedIter.html  struct.TransposedIter.html  trait.IntoTransposedIter.html  trait.IterTranspose.html
src/: lib.rs
src/iter_transpose/: lib.rs.html
