[package]
name = "iter-transpose"
version = "0.1.0"
authors = ["Michal Siedlaczek <siedlaczek@pm.me>"]
edition = "2018"
description = "Trait and functions that turn an `Option<I: Iterator>` into an iterator of options."
license = "MIT OR Apache-2.0"
repository = "https://github.com/elshize/iter-transpose"
readme = "README.md"
keywords = ["iterator", "option"]
categories = ["algorithms", "rust-patterns"]
